refactoring & unit tests